--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -33,11 +33,23 @@ html {
 @media (min-width: 1200px) and (max-width: 1919px) {
     html {
         font-size: 12px !important;
+        letter-spacing: 2.5pt;
+        line-height: 1.8;
     }
 }
 
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 768px) and (max-width: 1199px) {
     html {
         font-size: 10px !important;
+        letter-spacing: 2.5pt;
+        line-height: 1.8;
+    }
+}
+
+@media (max-width: 767px) {
+    html {
+        font-size: 9px !important;
+        letter-spacing: 1.5pt;
+        line-height: 1.2;
     }
 }
