--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -84,8 +84,12 @@ html {
     }
     .el-input__inner {
         border-radius: 0 !important;
-        height: 20px !important;
+        height: 40px !important;
         margin-bottom: 0px !important;
+    }
+    .el-form-item__content {
+        font-size: inherit;
+        line-height: 40px;
     }
     .el-form-item__error {   
         padding-top: unset;
