--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -49,7 +49,7 @@ html {
         line-height: 1.8;
     }
     .el-form-item {
-        margin-bottom: 12px;
+        margin-bottom: 12px !important;
     }
     .el-input__inner {
         border-radius: 0 !important;
@@ -73,6 +73,9 @@ html {
         font-size: 10px !important;
         letter-spacing: 2.5pt;
         line-height: 1.8;
+    }
+    .el-form-item {
+        margin-bottom: 12px !important;
     }
 }
 
