cover added, calendar fonts modified, thank u page text, bar added

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -101,6 +101,13 @@ html {
     }
 }
 
+.el-date-picker__header-label {
+    font-family: NotoSansCJKtc-Regular;
+}
+.el-year-table td .cell {
+    font-family: NotoSansCJKtc-Regular;
+}
+
 .el-form-item__error {   
     padding-top: unset;
     padding-left: 10px;
